<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/failure_layout"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#ffffff"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="MissingPrefix">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/failure_imageView"
            android:layout_width="150dip"
            android:layout_height="150dip"
            android:src="@drawable/mxu_empty_icon"/>

        <LinearLayout
            android:id="@+id/failure_net_ll"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/failue_retry_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:singleLine="true"
                android:text="@string/failure_net_tip"
                android:textColor="#999999"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/failure_retry_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/failure_net_retry"
                android:textColor="#999999"
                android:textSize="14sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/failure_solution_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:background="@drawable/mxu_net_failure_round"
            android:paddingBottom="8dip"
            android:paddingLeft="15dip"
            android:paddingRight="15dip"
            android:paddingTop="8dip"
            android:singleLine="true"
            android:text="@string/failure_solution"
            android:textColor="#666666"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/solution_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dip"
            android:gravity="center"
            android:paddingBottom="8dip"
            android:paddingLeft="15dip"
            android:paddingRight="15dip"
            android:paddingTop="8dip"
            android:text="@string/failure_solution_text"
            android:textColor="#999999"
            android:textSize="14sp"
            android:visibility="gone"/>
    </LinearLayout>

</RelativeLayout>